Fix all unit test and add a few basic ones. Move fake weather data to its own file.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -15,6 +15,17 @@
             "name": "Attach to Chrome",
             "port": 4201,
             "webRoot": "${workspaceRoot}"
+        },
+        {
+            "type": "chrome",
+            "request": "attach",
+            "name": "Attach Karma Chrome",
+            "address": "localhost",
+            "port": 9333,
+            "pathMapping": {
+                "/": "${workspaceRoot}/",
+                "/base/": "${workspaceRoot}/"
+            }
         }
     ]
 }
